arm64/dts: update thermal policy
Use LUT to reduce ondie temperature overshoots.

Bug: 336654779
Test: boot to home and Tj thermal throttling worked properly.
Change-Id: I05b2772274205169d0897d1a2381eb56eb8074ef
Signed-off-by: David Chao <davidchao@google.com>

--- a/dts/zumapro-a1-ipop.dts
+++ b/dts/zumapro-a1-ipop.dts
@@ -29,6 +29,17 @@
 		k_i = <42>;
 		early_throttle_k_p = <90>;
 		early_throttle_offset = <20>; // in Celsius
+
+		use-temp-lut-thermal;
+		temp_state_table =
+			//temp level
+			<  70    0
+			   75    1
+			   78    2
+			   79    3
+			   81    4
+			   87    5
+			   255   6 >;
 	};
 
 	tmuctrl_1: MID@100A0000 {
