Add common kernel config file
Bug: 346913170
Change-Id: Iabd227d159bbe32df3beee9a209608c7786cb2b6
Signed-off-by: Charles Yo <charlesyo@google.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -13,4 +13,5 @@ exports_files([
     "vendor_dlkm.props.zumapro",
     "vendor_dlkm_modules.zumapro",
     "vendor_kernel_boot_modules.zumapro",
+    "zumapro_defconfig",
 ])
