arm64/dts: zumapro: Enable VoLTE MIF feature for 5300
Bug: 346914580
Change-Id: I3011c27c80f230c0334be117b994d76da2019ce1
Signed-off-by: Mahesh Kallelil <kallelil@google.com>

--- a/dts/zumapro-board-cp-s5300-sit.dtsi
+++ b/dts/zumapro-board-cp-s5300-sit.dtsi
@@ -71,6 +71,7 @@
 				*/
 				mif,cp2ap_active_not_alive = <0>;
 
+				mif_off_during_volte = <1>;
 				/* phandle used for shutdown calls to s5910 clk-buffer*/
 				google,clk-buffer = <&s5910>;
 			};
