arm64/dts: Enable SysMMU for USB controller
Enable SysMMU for USB controller and restrict the dma mask to 36-bit
address space.

Bug: 208988089
Test: build and boot pass
Change-Id: Ie1a725c3a05c52ceecf5fb6b20455ffea4a33a39
Signed-off-by: Howard Yen <howardyen@google.com>

--- a/dts/zumapro-usb.dtsi
+++ b/dts/zumapro-usb.dtsi
@@ -10,3 +10,12 @@
 		phy_eusb_version = <0x701>;
 };
 
+&usbdrd_dwc3 {
+	iommus = <&sysmmu_hsi0>;
+	samsung,iommu-group = <&iommu_group_hsi>;
+
+	/* Device virtual address */
+	#dma-address-cells = <1>;
+	#dma-size-cells = <2>;
+	dma-window = <0x0 0xF 0xFFFFFFFF>;
+};
