arm64/dts: reserve three memory regions for usb host mode
Reserve three memory regions for usb host mode. Because AoC SRAM size is
limited, so we need additional memory from DRAM for the usecases like
heavy connection behind usb hub and SSD using uas driver.

    1. Data buffer in SRAM
    2. USB structures in SRAM
    3. USB structures in DRAM

Bug: 208988089
Test: build and boot pass, function works
Change-Id: Ifd6399fa9682c1c38a7c66d9c361b6875502594a
Signed-off-by: Howard Yen <howardyen@google.com>

--- a/dts/zumapro-usb.dtsi
+++ b/dts/zumapro-usb.dtsi
@@ -6,11 +6,32 @@
  */
 #include "google-dts-zuma/zuma-usb.dtsi"
 
+&reserved_memory {
+	xhci_dma_buffer: xhci_dma_buffer@17BB5000 {
+		compatible = "xhci-dma-pool";
+		reg = <0x0 0x17BB5000 0xB000>;
+		no-map;
+	};
+
+	xhci_dma: xhci_dma@17BC0000 {
+		compatible = "xhci-dma-pool";
+		reg = <0x0 0x17BC0000 0x40000>;
+		no-map;
+	};
+
+	xhci_dma_dram: xhci_dma_dram@97000000 {
+		compatible = "xhci-dma-pool";
+		reg = <0x0 0x97000000 0x400000>;
+		no-map;
+	};
+};
+
 &usbdrd_phy0 {
-		phy_eusb_version = <0x701>;
+	phy_eusb_version = <0x701>;
 };
 
 &usbdrd_dwc3 {
+	memory-region = <&xhci_dma>, <&xhci_dma_dram>, <&xhci_dma_buffer>;
 	iommus = <&sysmmu_hsi0>;
 	samsung,iommu-group = <&iommu_group_hsi>;
 
