arm64/dts: zumapro: migrate P24 tpmon setting to M25
Bug: 333308620
Change-Id: I3664d96135c9ae9c6141a147c0ff913ac75f7d25
Signed-off-by: minghaowang <minghaowang@google.com>

--- a/dts/zumapro-board-cp-s5300-sit.dtsi
+++ b/dts/zumapro-board-cp-s5300-sit.dtsi
@@ -74,6 +74,28 @@
 				mif_off_during_volte = <1>;
 				/* phandle used for shutdown calls to s5910 clk-buffer*/
 				google,clk-buffer = <&s5910>;
+
+				/* TPMON: CP throughput monitor */
+				cpif_tpmon {
+
+					tpmon_irq_affinity_0 {
+						level = <0x30 0x70 0xF0>;
+
+						boost0 {
+							boost_threshold = <1500 3500>;
+							unboost_threshold_mbps = <1000 3000>;
+						};
+					};
+
+					tpmon_rps {
+						level = <0x30 0x70 0xF0>;
+
+						boost0 {
+							boost_threshold = <1500 3500>;
+							unboost_threshold_mbps = <1000 3000>;
+						};
+					};
+				};
 			};
 		};
 	};
