--- a/zumapro_defconfig
+++ b/zumapro_defconfig
@@ -120,6 +120,7 @@ CONFIG_EXYNOS_ACPM_THERMAL=m
 CONFIG_EXYNOS_CPU_THERMAL=m
 CONFIG_GPU_THERMAL=m
 CONFIG_ISP_THERMAL=m
+CONFIG_THERMAL_UCLAMP_COOLING_DEVICE=m
 CONFIG_PINCTRL_SLG51002=m
 CONFIG_POWERMETER_S2MPG14=m
 CONFIG_POWERMETER_S2MPG15=m
