arm64/dts: zumapro: Fix dts warnings
Add missing address/size cells.
Add address to ports.

Bug: 342510451
Change-Id: I6c18a86dce936a332f6230a510d0f2c71522a7b4
Signed-off-by: Jacky Liu <qsliu@google.com>

--- a/dts/zumapro-debug.dtsi
+++ b/dts/zumapro-debug.dtsi
@@ -545,6 +545,9 @@
 		};
 
 		in-ports {
+			#address-cells = <1>;
+			#size-cells = <0>;
+
 			port@0 {
 				reg = <0>;
 				funnel0_in_port0: endpoint {
@@ -626,7 +629,8 @@
 		in-ports {
 			#address-cells = <1>;
 			#size-cells = <0>;
-			port {
+
+			port@0 {
 				reg = <0>;
 				funnel1_in_port0: endpoint {
 					remote-endpoint = <&funnel0_out_port>;
