--- a/dts/zumapro-usi.dtsi
+++ b/dts/zumapro-usi.dtsi
@@ -195,8 +195,9 @@
 		samsung,scl-clk-stretching;
 		samsung,usi-i2c-v2;
 		interrupts = <GIC_SPI IRQ_USI6_USI_PERIC0 IRQ_TYPE_LEVEL_HIGH 0>;
-		pinctrl-names = "default";
+		pinctrl-names = "default", "recovery";
 		pinctrl-0 = <&hsi2c6_bus>;
+		pinctrl-1 = <>;
 		clocks = <&clock VDOUT_CLK_PERIC0_USI6_USI>, <&clock GATE_PERIC0_TOP0_USI6_USI>;
 		clock-names = "ipclk_hsi2c", "gate_hsi2c_clk";
 		gpio_scl= <&gpp12 0 0x1>;
@@ -235,8 +236,9 @@
 		samsung,scl-clk-stretching;
 		samsung,usi-i2c-v2;
 		interrupts = <GIC_SPI IRQ_USI9_USI_PERIC1 IRQ_TYPE_LEVEL_HIGH 0>;
-		pinctrl-names = "default";
+		pinctrl-names = "default", "recovery";
 		pinctrl-0 = <&hsi2c9_bus>;
+		pinctrl-1 = <>;
 		clocks = <&clock VDOUT_CLK_PERIC1_USI9_USI>, <&clock GATE_PERIC1_TOP0_USI9_USI>;
 		clock-names = "ipclk_hsi2c", "gate_hsi2c_clk";
 		gpio_scl= <&gpp19 4 0x1>;
@@ -255,8 +257,9 @@
 		samsung,scl-clk-stretching;
 		samsung,usi-i2c-v2;
 		interrupts = <GIC_SPI IRQ_USI10_USI_PERIC1 IRQ_TYPE_LEVEL_HIGH 0>;
-		pinctrl-names = "default";
+		pinctrl-names = "default", "recovery";
 		pinctrl-0 = <&hsi2c10_bus>;
+		pinctrl-1 = <>;
 		clocks = <&clock VDOUT_CLK_PERIC1_USI10_USI>, <&clock GATE_PERIC1_TOP0_USI10_USI>;
 		clock-names = "ipclk_hsi2c", "gate_hsi2c_clk";
 		gpio_scl= <&gpp20 0 0x1>;
