--- a/zumapro_defconfig
+++ b/zumapro_defconfig
@@ -214,3 +214,5 @@ CONFIG_EXYNOS_CORESIGHT_ETF=y
 CONFIG_EXYNOS_CORESIGHT_ETR=y
 CONFIG_TYPEC_MAX77759_CONTAMINANT=m
 CONFIG_TYPEC_MAX77779_CONTAMINANT=m
+CONFIG_LINK_DEVICE_PCIE_IOMMU=y
+
