arm64/dts: zumapro: Rename google-dts-zuma to zuma
Bug: 319536450
Change-Id: Ibc9d2b86e90f1151253225321b165194c6704ab6
Signed-off-by: Jacky Liu <qsliu@google.com>

--- a/dts/zumapro-dpm-eng.dts
+++ b/dts/zumapro-dpm-eng.dts
@@ -7,5 +7,5 @@
 	compatible = "google,ZUMAPRO DPM-eng", "google,ZUMAPRO DPM-eng";
 };
 
-#include "google-dts-zuma/zuma-dpm-eng.dtsi"
-#include "google-dts-zuma/avf-dpm-eng.dtsi"
+#include "zuma/zuma-dpm-eng.dtsi"
+#include "zuma/avf-dpm-eng.dtsi"
