--- a/dts/zumapro.dtsi
+++ b/dts/zumapro.dtsi
@@ -19,27 +19,27 @@
 #include "zumapro-rmem.dtsi"
 #include "zumapro-debug.dtsi"
 #include "zumapro-dpm.dtsi"
-#include "google-dts-zuma/gs101-trusty.dtsi"
+#include "zuma/gs101-trusty.dtsi"
 #include "zumapro-pm-domains.dtsi"
 #include "zumapro-cpu.dtsi"
 #include "zumapro-pinctrl.dtsi"
-#include "google-dts-zuma/zuma-s2mpu.dtsi"
-#include "google-dts-zuma/zuma-gsa.dtsi"
+#include "zuma/zuma-s2mpu.dtsi"
+#include "zuma/zuma-gsa.dtsi"
 #include "zumapro-gpu.dtsi"
 #include "zumapro-tpu.dtsi"
-#include "google-dts-zuma/zuma-gxp.dtsi"
+#include "zuma/zuma-gxp.dtsi"
 #include "zumapro-usi.dtsi"
-#include "google-dts-zuma/zuma-ufs.dtsi"
+#include "zuma/zuma-ufs.dtsi"
 #include "zumapro-usb.dtsi"
 #include "zumapro-pcie.dtsi"
-#include "google-dts-zuma/gs101-dma-heap.dtsi"
+#include "zuma/gs101-dma-heap.dtsi"
 #include "zumapro-bts.dtsi"
-#include "google-dts-zuma/zuma-isp.dtsi"
-#include "google-dts-zuma/zuma-aoc.dtsi"
-#include "google-dts-zuma/zuma-audio.dtsi"
-#include "google-dts-zuma/zuma-mfc.dtsi"
-#include "google-dts-zuma/zuma-bigw.dtsi"
-#include "google-dts-zuma/zuma-pwm.dtsi"
+#include "zuma/zuma-isp.dtsi"
+#include "zuma/zuma-aoc.dtsi"
+#include "zuma/zuma-audio.dtsi"
+#include "zuma/zuma-mfc.dtsi"
+#include "zuma/zuma-bigw.dtsi"
+#include "zuma/zuma-pwm.dtsi"
 
 / {
 	compatible = "google,zumapro";
