--- a/dts/zumapro-board-cp-s5400-sit.dtsi
+++ b/dts/zumapro-board-cp-s5400-sit.dtsi
@@ -7,7 +7,7 @@
  */
 
 #include <dt-bindings/pinctrl/zuma.h>
-#include "google-dts-zuma/zuma-cp-s5300-sit.dtsi"
+#include "zuma/zuma-cp-s5300-sit.dtsi"
 
 / {
 	fragment@modemif {
