--- a/dts/zumapro-dpm.dtsi
+++ b/dts/zumapro-dpm.dtsi
@@ -13,4 +13,4 @@
 }; /* end of root */
 
 /* default settings built into kernel dt */
-#include "google-dts-zuma/zuma-dpm-user.dtsi"
+#include "zuma/zuma-dpm-user.dtsi"
