kleaf: Add zumapro targets
Add the following targets for zumapro:
- build_config
- dtstree
- kconfig_ext
- defconfig_fragments
- kernel_sources
- kernel
- kernel_ext_modules
- kernel_modules_install
- kernel_unstripped_modules_archive
- merged_kernel_uapi_headers
- vendor_ramdisk_modules_list
- system_dlkm_modules_list
- system_dlkm_modules_blocklist
- system_dlkm_props
- vendor_dlkm_modules_list
- vendor_dlkm_modules_blocklist
- vendor_dlkm_props
- kernel_images
- dist

Also move zumapro_soc here.

These target are mostly for devices to inherit from. kernel_images
and dist are for development and validation purposes to make sure there
are no external dependencies.

Bug: 319536450
Test: tools/bazel run --config=zumapro private/devices/google/zumapro:dist
Change-Id: Id705155d0999326273edc06cdfba4a29ce4e8e5f
Signed-off-by: Jacky Liu <qsliu@google.com>

--- a/dts/Makefile
+++ b/dts/Makefile
@@ -1,6 +1,9 @@
 # SPDX-License-Identifier: GPL-2.0
 
 zumapro_overlays := \
+	zumapro-dpm-eng.dtbo \
+	zumapro-dpm-userdebug.dtbo \
+	zumapro-dpm-user.dtbo \
 	zumapro-emulator.dtbo \
 	zumapro-hybrid.dtbo
 
@@ -9,6 +12,10 @@ zumapro_dtbs := \
 	zumapro-a0-ipop.dtb \
 	zumapro-a1-foplp.dtb \
 	zumapro-a1-ipop.dtb
+
+DTC_FLAGS_zuma-dpm-eng += -a 4096
+DTC_FLAGS_zuma-dpm-user += -a 4096
+DTC_FLAGS_zuma-dpm-userdebug += -a 4096
 
 # Usage:
 #   $(call DTBS_overlay_template, overlay, base_dtb, suffix)
