kleaf: Use //private/devices/google/common:kernel
Replace //private/google-modules/soc/gs:gs_kernel_build with
//private/devices/google/common:kernel to remove the unnecessary
dependency on private/google-modules/soc/gs.

Bug: 319536450
Change-Id: I86b3a493465eccd53200f890995cdc00fd8ea447
Signed-off-by: Jacky Liu <qsliu@google.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -240,7 +240,7 @@ kernel_module(
         "drivers/video/backlight/rt4539_bl.ko",
         "drivers/watchdog/s3c2410_wdt.ko",
     ],
-    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
+    kernel_build = "//private/devices/google/common:kernel",
     makefile = ["//private/google-modules/soc/gs:Makefile"],
     visibility = [
         # keep sorted
